--- a/services/event-generator/docker-compose.event-generator.yml
+++ b/services/event-generator/docker-compose.event-generator.yml
@@ -1,5 +1,5 @@
-include:
-  - ../../infra/rabbit/docker-compose.rabbit.yml
+# include:
+#   - ../../infra/rabbit/docker-compose.rabbit.yml
 services:
 
   event-generator:
