--- a/services/email-sender/src/pyproject.toml
+++ b/services/email-sender/src/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "alembic>=1.15.2,<2.0.0",
     "asyncpg>=0.30.0,<1.0.0",
     "redis>=5.2.1,<6.0.0",
-    "psycopg2>=2.9.10,<3.0.0"
+    "psycopg2>=2.9.10,<3.0.0",
+    "httpx>=0.28.1"
 
 ]
 
