--- a/services/ws_notification-service/src/pyproject.toml
+++ b/services/ws_notification-service/src/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "uvicorn (==0.35.0)",
     "gunicorn (==23.0.0)",
     "aiohttp-asgi (==0.6.1)",
+    "pyjwt[crypto] (==2.9.0)",
 ]
 
 
