Реализую коннектор к RabbitMQ

--- a/.env.example
+++ b/.env.example
@@ -89,7 +89,7 @@ KAFKA_OTHER_TOPIC=user_metric_other_event
 
 #RABBITMQ
 RABBITMQ_USER=user
-RABBITMQ_PASS=pass
+RABBITMQ_PASSWORD=pass
 RABBITMQ_ERLANG_COOKIE=e379f4f0-1e40-4286-af2e-2f8b48c34056
 RABBITMQ_MESSAGE_TTL=3600000
 RABBITMQ_DLQ_MESSAGE_TTL=86400000
