--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -1,9 +1,8 @@
 # Resolver для динамического разрешения имён (127.0.0.11 - Docker DNS)
 resolver 127.0.0.11 valid=10s ipv6=off;
 
-# Обновление upstream для RabbitMQ с использованием shared memory
+# Upstream для RabbitMQ Management UI
 upstream rabbitmq_management {
-    least_conn; # Используем стратегию наименьшего количества соединений
     zone rabbitmq_zone 64k; # Определяем shared memory для upstream
 
     server rabbitmq-1:15672 resolve;
@@ -26,18 +25,18 @@ server {
     error_page 502 503 504 @service_unavailable;
 
     location /rabbitmq/ {
-        set $backend "rabbitmq_management";
-        proxy_pass http://$backend;
+        proxy_pass http://rabbitmq_management/;
         proxy_connect_timeout 5s;
         proxy_send_timeout 10s;
         proxy_read_timeout 10s;
         proxy_buffering off;
 
-        # Перехват ошибок от upstream
+        # # Перехват ошибок от upstream
         proxy_intercept_errors on;
 
         # Обработчик ошибок для всех недоступных нод
         error_page 502 503 504 = @service_unavailable;
+
     }
 
     location /notification/ {
