--- a/infra/rabbit/rabbitmq.conf
+++ b/infra/rabbit/rabbitmq.conf
@@ -6,7 +6,7 @@ cluster_keepalive_interval = 10000
 
 # Настройки пользователя по умолчанию
 default_user = $(RABBITMQ_USER)
-default_pass = $(RABBITMQ_PASS)
+default_pass = $(RABBITMQ_PASSWORD)
 
 # Настройки статистики - отключаем устаревшую функцию
 management.rates_mode = basic
