--- a/services/notification-service/src/pyproject.toml
+++ b/services/notification-service/src/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pydantic-settings (==2.9.1)",
     "fastapi[all] (==0.115.12)",
     "httpx (>=0.28.1,<0.29.0)",
+    "aio-pika (>=9.5.5,<10.0.0)",
 ]
 
 [tool.poetry]
