Реализую таблицу tamplate для шаблонов.

--- a/services/email-sender/docker-compose.email-sender.yml
+++ b/services/email-sender/docker-compose.email-sender.yml
@@ -24,6 +24,8 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+      auth-api:
+        condition: service_healthy
     restart: always
 
 volumes:
