--- a/services/email-sender/src/alembic.ini
+++ b/services/email-sender/src/alembic.ini
@@ -5,6 +5,7 @@
 # Use forward slashes (/) also on windows to provide an os agnostic path
 script_location = migrations
 
+# version_table = alembic_version_email_sender
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
 # see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
