--- a/services/email-sender/src/pyproject.toml
+++ b/services/email-sender/src/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "redis>=5.2.1,<6.0.0",
     "psycopg2>=2.9.10,<3.0.0",
     "httpx>=0.28.1",
-    "greenlet>=3.2.0,<4.0.0"
+    "greenlet>=3.2.0,<4.0.0",
+    "aio-pika (==9.5.5)"
 
 ]
 
