--- a/services/email-sender/src/pyproject.toml
+++ b/services/email-sender/src/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "psycopg2>=2.9.10,<3.0.0",
     "httpx>=0.28.1",
     "greenlet>=3.2.0,<4.0.0",
-    "aio-pika (==9.5.5)"
+    "aio-pika (==9.5.5)",
+    "aiohttp (==3.12.13)"
 
 ]
 
