--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -24,21 +24,6 @@ server {
     # Общий обработчик ошибок
     error_page 502 503 504 @service_unavailable;
 
-    location /rabbitmq/ {
-        proxy_pass http://rabbitmq_management/;
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 10s;
-        proxy_read_timeout 10s;
-        proxy_buffering off;
-
-        # # Перехват ошибок от upstream
-        proxy_intercept_errors on;
-
-        # Обработчик ошибок для всех недоступных нод
-        error_page 502 503 504 = @service_unavailable;
-
-    }
-
     location /notification/ {
         set $backend "notification:8000";
         proxy_pass http://$backend;
@@ -111,5 +96,40 @@ server {
 
     location = /404.html {
         root   html;
+    }
+}
+
+server {
+    listen 4444;
+    server_name _;
+
+    # Общие таймауты для всех проксируемых запросов
+    proxy_connect_timeout 5s;
+    proxy_send_timeout 10s;
+    proxy_read_timeout 10s;
+    proxy_buffering off;
+
+    # Общий обработчик ошибок
+    error_page 502 503 504 @service_unavailable;
+
+    location / {
+        proxy_pass http://rabbitmq_management/;
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
+        proxy_buffering off;
+
+        # Перехват ошибок от upstream
+        proxy_intercept_errors on;
+
+        # Обработчик ошибок для всех недоступных нод
+        error_page 502 503 504 = @service_unavailable;
+    }
+
+    # Общий обработчик для недоступных сервисов
+    location @service_unavailable {
+        return 503 '{"error": "Service temporarily unavailable", "uri": "$request_uri", "backend": "$upstream_addr"}';
+        add_header Content-Type application/json;
+        add_header Retry-After 30;
     }
 }
