--- a/infra/rabbit/docker-compose.rabbit.yml
+++ b/infra/rabbit/docker-compose.rabbit.yml
@@ -85,6 +85,10 @@ services:
     depends_on:
       rabbitmq-1:
         condition: service_healthy
+      rabbitmq-2:
+        condition: service_healthy
+      rabbitmq-3:
+        condition: service_healthy
     restart: no
 
 volumes:
