--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -23,8 +23,8 @@ server {
     error_page 502 503 504 @service_unavailable;
 
     location /rabbitmq/ {
-        set $backend "rabbitmq_management";
-        proxy_pass http://$backend;
+        #set $backend "rabbitmq_management";
+        proxy_pass http://rabbitmq_management/;
     }
 
     location /notification-api/ {
