Реализую основной функционал воркера

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -27,6 +27,11 @@ server {
         proxy_pass http://rabbitmq_management/;
     }
 
+    location /ws-notification/ {
+        set $backend "ws-sender-worker:8080";
+        proxy_pass http://$backend;
+    }
+
     location /notification-api/ {
         set $backend "notification-api:8000";
         proxy_pass http://$backend;
