--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -113,7 +113,8 @@ server {
     error_page 502 503 504 @service_unavailable;
 
     location / {
-        proxy_pass http://rabbitmq_management/;
+        # Передача запроса без изменения URI
+        proxy_pass http://rabbitmq_management;
         proxy_connect_timeout 5s;
         proxy_send_timeout 10s;
         proxy_read_timeout 10s;
