завершаю ws-sender

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,8 @@ services:
       '
     volumes:
       - redis_data:/data
+    ports:
+      - 6379:6379
     deploy:
       resources:
         limits:
