--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -27,6 +27,9 @@ server {
     location /ws-notification/ {
         set $backend "ws-sender-worker:8080";
         proxy_pass http://$backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location /notification/ {
