--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           flake8 services/notification-service/src services/content-actions-service/src services/ws_notification-service/src \
           --max-line-length=100 \
-          --extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237,WPS202,WPS115,WPS201,WPS232,WPS220,WPS476,WPS214,WPS432,WPS229 \
+          --extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237,WPS202,WPS115,WPS201,WPS232,WPS432,WPS229 \
           --select=WPS \
           --exclude=services/notification-service/src/migration/*,services/notification-service/src/alembic/* \
           --format=html \
