--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -30,6 +30,7 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        proxy_read_timeout 3600s; # увеличиваю таймаут до 1 часа, самое то для продакшн решений
     }
 
     location /notification/ {
