--- a/.env.example
+++ b/.env.example
@@ -153,6 +153,10 @@ FILMAPI_HOST=async-api
 FILMAPI_PORT=8000
 
 
+## NOTIFICATION API
+NOTIFICATION_API_HOST=notification
+NOTIFICATION_API_PORT=8000
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
