--- a/services/auth-service/src/pyproject.toml
+++ b/services/auth-service/src/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0",
     "gunicorn>=23.0.0,<24.0.0",
     "aiohttp (>=3.11.18,<4.0.0)",
-    "pytz (>=2025.2,<2026.0)"
+    "pytz (>=2025.2,<2026.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 [project.optional-dependencies]
