--- a/.env.example
+++ b/.env.example
@@ -154,8 +154,8 @@ FILMAPI_PORT=8000
 
 
 ## NOTIFICATION API
-NOTIFICATION_API_HOST=notification
-NOTIFICATION_API_PORT=8000
+NOTIFYAPI_HOST=notification
+NOTIFYAPI_PORT=8000
 
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
