--- a/services/content-actions-service/src/pyproject.toml
+++ b/services/content-actions-service/src/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "ujson (>=5.10.0,<6.0.0)",
     "types-ujson (>=5.10.0.20250326,<6.0.0.0)",
     "backoff (==2.2.1)",
-    "sentry-sdk (==2.30.0)"
+    "sentry-sdk (==2.30.0)",
+    "httpx (>=0.28.1,<0.29.0)"
+
 ]
 
 [project.optional-dependencies]
