Реализую чтение сообщений из очередей rabbitmq.

--- a/services/email-sender/src/Dockerfile
+++ b/services/email-sender/src/Dockerfile
@@ -23,3 +23,6 @@ COPY services/email-sender/src/ .
 RUN chmod +x ./scripts/run_email_sender.sh
 
 CMD ["./scripts/run_email_sender.sh", "celery"]
+
+# RUN chmod +x ./main.py
+# CMD ["./main.py"]
