--- a/.env.example
+++ b/.env.example
@@ -153,8 +153,8 @@ FILMAPI_HOST=async-api
 FILMAPI_PORT=8000
 
 ## NOTIFICATION API
-NOTIFICATION_API_HOST=notification
-NOTIFICATION_API_PORT=8000
+NOTIFYAPI_HOST=notification
+NOTIFYAPI_PORT=8000
 
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
