--- a/services/notification-service/src/pyproject.toml
+++ b/services/notification-service/src/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "fastapi[all] (==0.115.12)",
     "httpx (>=0.28.1,<0.29.0)",
     "aio-pika (>=9.5.5,<10.0.0)",
+    "redis (==5.3.0)",
 ]
 
 [tool.poetry]
