--- a/services/email-sender/src/pyproject.toml
+++ b/services/email-sender/src/pyproject.toml
@@ -18,8 +18,8 @@ dependencies = [
     "httpx>=0.28.1",
     "greenlet>=3.2.0,<4.0.0",
     "aio-pika (==9.5.5)",
-    "aiohttp (==3.12.13)"
-
+    "aiohttp (==3.12.13)",
+    "jinja2>=3.1.6"
 ]
 
 [project.optional-dependencies]
