--- a/services/event-generator/src/pyproject.toml
+++ b/services/event-generator/src/pyproject.toml
@@ -15,7 +15,10 @@ dependencies = [
     "sentry-sdk (==2.30.0)",
     "celery>=5.5.3",
     "flower>=2.0.1",
-    "backoff-async>=2.0.0"
+    "backoff-async>=2.0.0",
+    "jinja2 (==3.1.6)",
+    "lxml (==6.0.0)",
+    "sqlalchemy (==2.0.40)"
 ]
 
 [project.optional-dependencies]
