Настраиваю запуск link сервиса в контейнере

--- a/.env.example
+++ b/.env.example
@@ -156,6 +156,10 @@ FILMAPI_PORT=8000
 NOTIFYAPI_HOST=notification
 NOTIFYAPI_PORT=8000
 
+# LINK SERVICE
+SHORTLINK_HOST=localhost
+SHORTLINK_PROTOCOL=http
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
