--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -24,6 +24,11 @@ server {
     # Общий обработчик ошибок
     error_page 502 503 504 @service_unavailable;
 
+    location ~ ^/(l|link)/ {
+        set $backend "link:8000";
+        proxy_pass http://$backend;
+    }
+
     location /ws-notification/ {
         set $backend "ws-sender-worker:8080";
         proxy_pass http://$backend;
