Вношу правки после ревью @Potatoes3212

--- a/services/email-sender/docker-compose.email-sender.yml
+++ b/services/email-sender/docker-compose.email-sender.yml
@@ -1,6 +1,4 @@
 
-# include:
-#   - ../../infra/rabbit/docker-compose.rabbit.yml
 services:
 
   email-sender:
@@ -14,12 +12,14 @@ services:
     cpus: "1"
     mem_limit: 256M
     depends_on:
-      rabbitmq-1:
-        condition: service_healthy
-      rabbitmq-2:
-        condition: service_healthy
-      rabbitmq-3:
-        condition: service_healthy
+      # rabbitmq-1:
+      #   condition: service_healthy
+      # rabbitmq-2:
+      #   condition: service_healthy
+      # rabbitmq-3:
+      #   condition: service_healthy
+      rabbit-init:
+        condition: service_started
       redis:
         condition: service_healthy
       postgres:
