--- a/services/email-sender/src/Dockerfile
+++ b/services/email-sender/src/Dockerfile
@@ -22,7 +22,4 @@ COPY services/email-sender/src/ .
 
 RUN chmod +x ./scripts/run_email_sender.sh
 
-CMD ["./scripts/run_email_sender.sh", "celery"]
-
-# RUN chmod +x ./main.py
-# CMD ["./main.py"]
+CMD ["./scripts/run_email_sender.sh"]
