--- a/services/email-sender/docker-compose.email-sender.yml
+++ b/services/email-sender/docker-compose.email-sender.yml
@@ -4,6 +4,7 @@
 services:
 
   email-sender:
+    container_name: email-sender
     build:
       context: ../..
       dockerfile: services/email-sender/src/Dockerfile
@@ -31,6 +32,7 @@ services:
     restart: always
 
   mailhog:
+    container_name: mailhog
     image: mailhog/mailhog:latest
     ports:
       - "1025:1025"   # SMTP
