Реализую API для отправки массовых нотификаций

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -24,6 +24,11 @@ server {
     # Общий обработчик ошибок
     error_page 502 503 504 @service_unavailable;
 
+    location /generator/ {
+        set $backend "generator:8080";
+        proxy_pass http://$backend;
+    }
+
     location ~ ^/(l|link)/ {
         set $backend "link:8000";
         proxy_pass http://$backend;
