--- a/services/event-generator/src/pyproject.toml
+++ b/services/event-generator/src/pyproject.toml
@@ -12,9 +12,12 @@ dependencies = [
     "gunicorn>=23.0.0,<24.0.0",
     "aiohttp (>=3.11.18,<4.0.0)",
     "backoff (==2.2.1)",
+    "redis (==5.3.0)",
     "sentry-sdk (==2.30.0)",
+    "asyncpg>=0.30.0,<1.0.0",
     "celery>=5.5.3",
     "flower>=2.0.1",
+    "backoff-async>=2.0.0",
     "jinja2 (==3.1.6)",
     "lxml (==6.0.0)",
     "sqlalchemy (==2.0.40)",
