Вношу финальные правки

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -24,8 +24,8 @@ server {
     # Общий обработчик ошибок
     error_page 502 503 504 @service_unavailable;
 
-    location /generator/ {
-        set $backend "generator:8080";
+    location /event-generator/ {
+        set $backend "event-generator:8000";
         proxy_pass http://$backend;
     }
 
