--- a/backup/elastic_dump/dump/movies_mapping.json
+++ b/backup/elastic_dump/dump/movies_mapping.json
@@ -92,6 +92,12 @@
                 "writers_names": {
                     "type": "text",
                     "analyzer": "ru_en"
+                },
+                "embedding": {
+                    "type": "dense_vector",
+                    "dims": 384,
+                    "index": true,
+                    "similarity": "cosine"
                 }
             }
         }
