Добавляю бизнес логику в FilmRepository и FilmService для вычисления по графам (пока не закончил).

--- a/.env.example
+++ b/.env.example
@@ -160,6 +160,9 @@ NOTIFICATION_API_PORT=8000
 SHORTLINK_HOST=localhost
 SHORTLINK_PROTOCOL=http
 
+# RECOMMENDATION SERVICES
+EMBEDDING_DIMS=384
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
