Реализую рабочий запрос в ES для поиска по векторам.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - "xpack.security.enabled=false"
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     command: bin/elasticsearch
+    ports:
+      - "9200:9200"
     expose:
       - ${ELASTIC_PORT}
     volumes:
