--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -19,6 +19,8 @@ services:
     command: bin/elasticsearch
     expose:
       - ${ELASTIC_PORT}
+    ports:
+      - "9200:9200"
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
     cpus: "2"
@@ -69,7 +71,8 @@ services:
       context: .
       dockerfile: backup/elastic_dump/dump_loader/Dockerfile
     environment:
-      - ELASTIC_HOST=${ELASTIC_HOST}
+      - ELASTIC_HOST=elasticsearch
+      # - ELASTIC_HOST=${ELASTIC_HOST}
       - ELASTIC_PORT=${ELASTIC_PORT}
     depends_on:
       elasticsearch:
