--- a/services/nl-consumer/src/pyproject.toml
+++ b/services/nl-consumer/src/pyproject.toml
@@ -10,8 +10,7 @@ dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "aiohttp (>=3.12.14,<4.0.0)",
-    "sentence-transformers (>=5.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
 ]
 
 [tool.poetry]
