--- a/services/nl-consumer/src/pyproject.toml
+++ b/services/nl-consumer/src/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
+    "alembic (>=1.16.4,<2.0.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)",
 ]
 
 [tool.poetry]
