--- a/services/embedding-service/src/pyproject.toml
+++ b/services/embedding-service/src/pyproject.toml
@@ -10,11 +10,22 @@ dependencies = [
     "uvicorn (==0.34.1)",
     "gunicorn (==23.0.0)",
     "pydantic-settings (==2.9.1)",
-    "sentence-transformers (==5.0.0)"
+    "torch (>=2.7.1,<3.0.0)",
+    "torchvision (>=0.22.1,<0.23.0)",
+    "sentence-transformers[onnx] (==5.0.0)",
 ]
 
 [tool.poetry]
 package-mode = false
+
+[[tool.poetry.source]]
+name = "pytorch_cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
+
+[tool.poetry.dependencies]
+torch = {source = "pytorch_cpu"}
+torchvision = {source = "pytorch_cpu"}
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
