--- a/services/embedding-etl/src/pyproject.toml
+++ b/services/embedding-etl/src/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "aiohttp (>=3.11.18,<4.0.0)",
     "httpx>=0.28.1",
     "elasticsearch[async]>=8.13.2,<9.0.0",
-    "redis>=5.0.4,<6.0.0"
+    "redis>=5.0.4,<6.0.0",
+    "celery>=5.5.3"
 ]
 
 [project.optional-dependencies]
