--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ include:
   - ./services/metric-service/docker-compose.metric-services.yml
   - ./services/event-generator/docker-compose.event-generator.yml
   - ./services/email-sender/docker-compose.email-sender.yml
+  - ./services/nl-consumer/src/docker-compose.nl-consumer.yml
 
 services:
   elasticsearch:
@@ -213,7 +214,7 @@ services:
     restart: "always"
 
   postgres:
-    container_name: postgres-container
+    container_name: postgres
     image: postgres:17-alpine
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
