Вношу правки после ревью

--- a/.env.example
+++ b/.env.example
@@ -160,6 +160,8 @@ NOTIFICATION_API_PORT=8000
 SHORTLINK_HOST=localhost
 SHORTLINK_PROTOCOL=http
 
+AI_MODEL_NAME=paraphrase-multilingual-MiniLM-L12-v2
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
