--- a/services/embedding-etl/src/pyproject.toml
+++ b/services/embedding-etl/src/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "httpx>=0.28.1",
     "elasticsearch[async]>=8.13.2,<9.0.0",
     "redis>=5.0.4,<6.0.0",
-    "celery>=5.5.3"
+    "celery>=5.5.3",
+    "debugpy>=1.8.13,<2.0.0"
 ]
 
 [project.optional-dependencies]
