--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
 orjson = "^3.10.18"
 aio-pika = "^9.5.5"
+numpy = "^2.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
