--- a/services/nl-consumer/src/pyproject.toml
+++ b/services/nl-consumer/src/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "alembic (>=1.16.4,<2.0.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
+    "numpy (>=2.3.1,<3.0.0)",
 ]
 
 [tool.poetry]
