--- a/services/nl-consumer/src/pyproject.toml
+++ b/services/nl-consumer/src/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12,<3.14"
 dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
-    "fastapi (>=0.116.1,<0.117.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
@@ -15,6 +15,8 @@ dependencies = [
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "numpy (>=2.3.1,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "orjson (>=3.11.0,<4.0.0)",
 ]
 
 [tool.poetry]
